lilv (0.26.3) unstable; urgency=medium

  * Address new warnings in clang and clang-tidy 21
  * Fix potential crash when UIs have multiple types or binaries

 -- David Robillard <d@drobilla.net>  Wed, 21 Jan 2026 20:47:23 +0000

lilv (0.26.2) stable; urgency=medium

  * Actually reload files if bundles are unloaded then reloaded
  * Add support for loading xsd:float literals, "INF", and "NaN"
  * Avoid warning about non-existent entries in LV2_PATH
  * Fix crash when duplicate plugins are discovered
  * Fix lilv_node_is_literal() with booleans
  * Refine command line tool interfaces and documentation
  * lv2bench: Add support for common features and options
  * lv2bench: Use more realistic real-time scheduling

 -- David Robillard <d@drobilla.net>  Tue, 25 Nov 2025 19:49:02 +0000

lilv (0.26.0) stable; urgency=medium

  * Add header warnings test
  * Add option to control indexing overhead for subject queries
  * Avoid over-use of yielding meson options
  * Cache LANG value and add option to override it
  * Fix Python tests
  * Fix build with dynmanifest support
  * Fix loading plugins that haven't been loaded yet as state
  * Fix loading plugins with invalid lv2:appliesTo properties as state
  * Fix potential memory leak in lilv_world_load_plugin_classes()
  * Fix potential memory leak in lilv_world_set_option()
  * Gracefully ignore and warn about non-directories in LV2_PATH
  * Improve loading performance when many plugin versions are found
  * Improve performance when loading and deleting state
  * Only consider manifest data when discovering related presets/etc
  * Print a warning when a property unexpectedly has several values
  * Reduce temporary node allocations during query operations

 -- David Robillard <d@drobilla.net>  Wed, 12 Nov 2025 19:15:00 +0000

lilv (0.24.26) stable; urgency=medium

  * Add lint option with project metadata and code quality tests
  * Avoid use of VLAs in lv2apply
  * Clean up and isolate platform-specific code